# cpplib-core

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-image.sh  compile.sh  core-main.cpp  core-test.cpp  main.cpp  run.sh  test.cpp
docker/: Dockerfile  build-debug.sh
include-test/ylib/core/: LangTest.h
include/ylib/: test.h
include/ylib/core/: lang.h  sutils.h  time.h
include/ylib/io/: io.h
include/ylib/logging/: Logger.h
include/ylib/math/: math.h
include/ylib/thread/: Sync.h
include/ylib/utils/: Map.h  properties.h
include/ylib/web/: rest.h
test-include/ylib/core/: LangTest.h  StringUtilsTest.h  TimeTest.h
test-include/ylib/utils/: PropertiesTest.h
test-resources/properties/: sample.properties
unit-test/ylib/core/: TimeTest.h
